--- a/description
+++ b/description
@@ -1,2 +1,2 @@
-# unraid-vmbackup v1.1.2 - 2018/03/26
+# unraid-vmbackup v1.1.3 - TESTING
 a script for backing up VMs in unraid including vdisks and configuration files.
