update version to v1.1.4 - 2018/05/19

--- a/description
+++ b/description
@@ -1,2 +1,2 @@
-# unraid-vmbackup v1.1.4 - TESTING
+# unraid-vmbackup v1.1.4 - 2018/05/19
 a script for backing up VMs in unraid including vdisks and configuration files.
