--- a/description
+++ b/description
@@ -1,2 +1,2 @@
-# unraid-vmbackup v1.1.5 - TESTING
+# unraid-vmbackup v1.1.5 - 2019/11/21
 a script for backing up VMs in unraid including vdisks and configuration files.
