--- a/description
+++ b/description
@@ -1,2 +1,2 @@
-# unraid-vmbackup v1.2.0 - TESTING
+# unraid-vmbackup v1.2.0 - 2019/11/27
 a script for backing up VMs in unraid including vdisks and configuration files.
