--- a/description
+++ b/description
@@ -1,2 +1,2 @@
-# unraid-vmbackup v1.2.2 - Development
+# unraid-vmbackup v1.2.2 - 2019/12/18
 a script for backing up VMs in unraid including vdisks and configuration files.
